--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,9 +28,9 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: clean
-      run: mvn clean --file pom.xml
+      run: mvn -B clean --file pom.xml
     - name: Compile Maven
-      run: mvn compile --file pom.xml
+      run: mvn -B compile --file pom.xml
     - name: Build with Maven
       run: mvn -B package --file pom.xml
       
