--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,7 +32,7 @@ jobs:
       run: mvn -B clean --file pom.xml
     - name: Compile Maven
       working-directory: ./my-app
-      run: mvn -B compile --file pom.xml
+      run: mvn -Be compile --file pom.xml
     - name: Build with Maven
       working-directory: ./my-app
       run: mvn -B package --file pom.xml
