--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,8 +18,24 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    outputs:
+      jar_version: ${{ steps.bump.outputs.jar_version }}
 
     steps:
+    - name: Bump jar version
+      id: bump
+      run: |
+        POMPATH=my-app
+        OLD_VERSION=$(cd $POMPATH && mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+        BUMP_MODE="none"
+        old="$OLD_VERSION"
+        parts=( ${old//./ } )
+        bv=$((parts[2] + 1))
+        NEW_VERSION="${parts[0]}.${parts[1]}.${bv}"
+        echo "pom.xml at" $POMPATH "will be bumped from" $OLD_VERSION "to" $NEW_VERSION
+        mvn -q versions:set -DnewVersion="${NEW_VERSION}" --file $POMPATH/pom.xml
+        echo ::set-output name=jar_version::${NEW_VERSION}
+
     - uses: actions/checkout@v3
     - name: Set up JDK 11
       uses: actions/setup-java@v3
@@ -32,7 +48,7 @@ jobs:
       run: mvn -B clean --file pom.xml
     - name: Compile Maven
       working-directory: ./my-app
-      run: mvn -Be compile --file pom.xml
+      run: mvn -B compile --file pom.xml
     - name: Build with Maven
       working-directory: ./my-app
       run: mvn -B package --file pom.xml
