--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,10 +18,22 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     outputs:
       jar_version: ${{ steps.bump.outputs.jar_version }}
 
     steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 8
+      uses: actions/setup-java@v2
+      with:
+        java-version: '8'
+        distribution: 'adopt'
+        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
+        settings-path: ${{ github.workspace }} # location for the settings.xml file
+
     - name: Bump jar version
       id: bump
       run: |
@@ -35,23 +47,18 @@ jobs:
         echo "pom.xml at" $POMPATH "will be bumped from" $OLD_VERSION "to" $NEW_VERSION
         mvn -q versions:set -DnewVersion="${NEW_VERSION}" --file $POMPATH/pom.xml
         echo ::set-output name=jar_version::${NEW_VERSION}
+    - name: Compile
+      run: mvn -B compile --file my-app/pom.xml
 
-    - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
+    - name: Build a package
+      run: mvn -B package --file my-app/pom.xml
+
+    - name: Temporarily save jar artifact
+      uses: actions/upload-artifact@v2
       with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: maven
-    - name: clean
-      working-directory: ./my-app
-      run: mvn -B clean --file pom.xml
-    - name: Compile Maven
-      working-directory: ./my-app
-      run: mvn -B compile --file pom.xml
-    - name: Build with Maven
-      working-directory: ./my-app
-      run: mvn -B package --file pom.xml
+        name: jar-artifact
+        path: ${{ github.workspace }}/my-app/target/*.jar
+        retention-days: 1
       
       
 
