change naming for image

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -75,4 +75,4 @@ jobs:
     
     - name: docker push
       run: |
-        docker push saharrubinovich/hello-githhub:{$NEW_VERSION}
+        docker push saharrubinovich/hello-githhub:$NEW_VERSION
