--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -65,7 +65,7 @@ jobs:
     - name: build image
       working-directory: ./my-app
       run: |
-        docker build -t saharrubinovich/hello-githhub:{$NEW_VERSION}  
+        docker build -t saharrubinovich/hello-githhub:$NEW_VERSION
     
     - name: Login to DockerHub
       uses: docker/login-action@v1
