--- a/my-app/Dockerfile
+++ b/my-app/Dockerfile
@@ -1,5 +1,5 @@
 FROM anapsix/alpine-java
-RUN useradd -D non-root
-USER non-root
+RUN useradd -D nonroot
+USER nonroot
 ADD target/my-app-*.jar /home/myjar.jar
 CMD ["java","-jar","/home/myjar.jar"]
