--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,7 +22,7 @@ jobs:
       contents: read
       packages: write
     outputs:
-      jar_version: ${{ steps.bump.outputs.jar_version }}
+      jar_version: ${{ steps.build.outputs.jar_version }}
 
     steps:
     - uses: actions/checkout@v2
@@ -33,21 +33,26 @@ jobs:
         distribution: 'adopt'
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
-
-    - name: Bump jar version
+    
+    - name: Bump Version
       id: bump
-      run: |
-        POMPATH=my-app
-        OLD_VERSION=$(cd $POMPATH && mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
-        BUMP_MODE="none"
-        old="$OLD_VERSION"
-        parts=( ${old//./ } )
-        bv=$((parts[2] + 1))
-        NEW_VERSION="${parts[0]}.${parts[1]}.${bv}"
-        echo "pom.xml at" $POMPATH "will be bumped from" $OLD_VERSION "to" $NEW_VERSION
-        mvn -q versions:set -DnewVersion="${NEW_VERSION}" --file $POMPATH/pom.xml
-        echo ::set-output name=jar_version::${NEW_VERSION}
-        export NEW_VERSION=NEW_VERSION
+      uses: nnichols/maven-version-bump-action@v3
+      with:
+        github-token: ${{ secrets.TOKEN }}
+    # - name: Bump jar version
+    #   id: bump
+    #   run: |
+    #     POMPATH=my-app
+    #     OLD_VERSION=$(cd $POMPATH && mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+    #     BUMP_MODE="none"
+    #     old="$OLD_VERSION"
+    #     parts=( ${old//./ } )
+    #     bv=$((parts[2] + 1))
+    #     NEW_VERSION="${parts[0]}.${parts[1]}.${bv}"
+    #     echo "pom.xml at" $POMPATH "will be bumped from" $OLD_VERSION "to" $NEW_VERSION
+    #     mvn -q versions:set -DnewVersion="${NEW_VERSION}" --file $POMPATH/pom.xml
+    #     echo ::set-output name=jar_version::${NEW_VERSION}
+    #     export NEW_VERSION=NEW_VERSION
     
     - name: Compile
       run: mvn -B compile --file my-app/pom.xml
@@ -63,9 +68,13 @@ jobs:
         retention-days: 1
     
     - name: build image
+      id: build
       working-directory: ./my-app
       run: |
-        docker build -t saharrubinovich/hello-githhub:${{ steps.bump.outputs.jar_version }} .
+        POMPATH=my-app
+        NEW_VERSION=$(cd $POMPATH && mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+        echo ::set-output name=jar_version::${NEW_VERSION}
+        docker build -t saharrubinovich/hello-githhub:${{ steps.build.outputs.jar_version }} .
     
     - name: Login to DockerHub
       uses: docker/login-action@v1
