--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,7 +22,7 @@ jobs:
       contents: read
       packages: write
     outputs:
-      jar_version: ${{ steps.build.outputs.jar_version }}
+      jar_version: ${{ steps.version.outputs.jar_version }}
 
     steps:
     - uses: actions/checkout@v2
@@ -39,6 +39,13 @@ jobs:
       uses: nnichols/maven-version-bump-action@v3
       with:
         github-token: ${{ secrets.TOKEN }}
+    
+    - name: get version number
+      id: version
+      run: |
+        POMPATH=my-app
+        NEW_VERSION=$(cd $POMPATH && mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+        echo ::set-output name=jar_version::${NEW_VERSION}
     # - name: Bump jar version
     #   id: bump
     #   run: |
@@ -71,10 +78,7 @@ jobs:
       id: build
       working-directory: ./my-app
       run: |
-        POMPATH=my-app
-        NEW_VERSION=$(cd $POMPATH && mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
-        echo ::set-output name=jar_version::${NEW_VERSION}
-        docker build -t saharrubinovich/hello-githhub:${{ steps.build.outputs.jar_version }} .
+        docker build -t saharrubinovich/hello-githhub:${{ steps.version.outputs.jar_version }} .
     
     - name: Login to DockerHub
       uses: docker/login-action@v1
@@ -84,4 +88,4 @@ jobs:
     
     - name: docker push
       run: |
-        docker push saharrubinovich/hello-githhub:${{ steps.bump.outputs.jar_version }}
+        docker push saharrubinovich/hello-githhub:${{ steps.version.outputs.jar_version }}
