change versioning #patch

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -47,7 +47,8 @@ jobs:
       uses: nnichols/maven-version-bump-action@v3
       with:
         github-token: ${{ secrets.TOKEN }}
-        # pom-path: ./my-app
+        pom-path: ./my-app
+        git-username: saharrubinovich
         # working-directory: ./my-app
     
     # - name: get version number
