--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,7 +22,7 @@ jobs:
       contents: read
       packages: write
     outputs:
-      jar_version: ${{steps.bump.outputs.version}}
+      jar_version: ${{steps.bump.outputs.jar_version}}
  
     env:
       working-directory: ./my-app
@@ -42,13 +42,13 @@ jobs:
         settings-path: ${{ github.workspace }} # location for the settings.xml file
         cache-dependency-path: ./my-app
     
-    - name: Bump Version
-      id: bump 
-      uses: nnichols/maven-version-bump-action@v3
-      with:
-        github-token: ${{ secrets.TOKEN }}
-        pom-path: ./my-app
-        git-username: saharrubinovich
+    # - name: Bump Version
+    #   id: bump 
+    #   uses: nnichols/maven-version-bump-action@v3
+    #   with:
+    #     github-token: ${{ secrets.TOKEN }}
+    #     pom-path: ./my-app
+    #     git-username: saharrubinovich
         # working-directory: ./my-app
     
     # - name: get version number
@@ -57,20 +57,19 @@ jobs:
     #     POMPATH=my-app
     #     NEW_VERSION=$(cd $POMPATH && mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
     #     echo ::set-output name=jar_version::${NEW_VERSION}
-    # - name: Bump jar version
-    #   id: bump
-    #   run: |
-    #     POMPATH=my-app
-    #     OLD_VERSION=$(cd $POMPATH && mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
-    #     BUMP_MODE="none"
-    #     old="$OLD_VERSION"
-    #     parts=( ${old//./ } )
-    #     bv=$((parts[2] + 1))
-    #     NEW_VERSION="${parts[0]}.${parts[1]}.${bv}"
-    #     echo "pom.xml at" $POMPATH "will be bumped from" $OLD_VERSION "to" $NEW_VERSION
-    #     mvn -q versions:set -DnewVersion="${NEW_VERSION}" --file $POMPATH/pom.xml
-    #     echo ::set-output name=jar_version::${NEW_VERSION}
-    #     export NEW_VERSION=NEW_VERSION
+    - name: Bump jar version
+      id: bump
+      run: |
+        POMPATH=my-app
+        OLD_VERSION=$(cd $POMPATH && mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+        BUMP_MODE="none"
+        old="$OLD_VERSION"
+        parts=( ${old//./ } )
+        bv=$((parts[2] + 1))
+        NEW_VERSION="${parts[0]}.${parts[1]}.${bv}"
+        echo "pom.xml at" $POMPATH "will be bumped from" $OLD_VERSION "to" $NEW_VERSION
+        mvn -q versions:set -DnewVersion="${NEW_VERSION}" --file $POMPATH/pom.xml
+        echo ::set-output name=jar_version::${NEW_VERSION}
     
     - name: Compile
       run: mvn -B compile --file pom.xml
@@ -89,7 +88,7 @@ jobs:
       id: build
       working-directory: ./my-app
       run: |
-        docker build -t saharrubinovich/hello-githhub:${{steps.bump.outputs.version}} .
+        docker build -t saharrubinovich/hello-githhub:${{steps.bump.outputs.jar_version}} .
     
     - name: Login to DockerHub
       uses: docker/login-action@v1
@@ -99,4 +98,10 @@ jobs:
     
     - name: docker push
       run: |
-        docker push saharrubinovich/hello-githhub:${{steps.bump.outputs.version}}
+        docker push saharrubinovich/hello-githhub:${{steps.bump.outputs.jar_version}}
+
+    - name: push to github
+      run: |
+        git add .
+        git commit -m "update version"
+        git push ${{ secrets.REPO }}
