--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -72,10 +72,10 @@ jobs:
         echo ::set-output name=jar_version::${NEW_VERSION}
     
     - name: Compile
-      run: mvn -B compile --file pom.xml
+      run: mvn -B compile --file my-app/pom.xml
 
     - name: Build a package
-      run: mvn -B package --file pom.xml
+      run: mvn -B package --file my-app/pom.xml
 
     - name: Temporarily save jar artifact
       uses: actions/upload-artifact@v2
