--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -102,6 +102,8 @@ jobs:
 
     - name: push to github
       run: |
+        git config --global user.email ${{ secrets.GIT_EMAIL }}
+        git config --global user.name ${{ secrets.GIT_USER }}
         git add .
         git commit -m "update version"
         git push ${{ secrets.REPO }}
