--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -106,9 +106,10 @@ jobs:
         git config --global user.name ${{ secrets.GIT_USER }}
         git add .
         git commit -m "update version"
+        git push https://${{ secrets.GIT_USER }}:${{ secrets.GIT_USER }}@github.com/SaharRubinovich/maven-hello-world.git
         
-    - name: Push changes
-      uses: ad-m/github-push-action@master
-      with:
-        github_token: ${{ secrets.TOKEN }}
-        branch: ${{ github.ref }}
+    # - name: Push changes
+    #   uses: ad-m/github-push-action@master
+    #   with:
+    #     github_token: ${{ secrets.TOKEN }}
+    #     branch: ${{ github.ref }}
