--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,6 +41,7 @@ jobs:
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
         cache-dependency-path: ./my-app
+        token: ${{ secrets.TOKEN }}
     
     # - name: Bump Version
     #   id: bump 
